<resources>
    <string name="app_name">ToDo</string>
    <string name="note_name">Название заметки</string>
    <string name="note_content">Описание заметки</string>
    <string name="button_ok">OK</string>
    <string name="button_filter">Фильтрация</string>
    <string name="delete_note_menu_item">Удалить заметку</string>
    <string name="form_edit_move_button">Переместить записку</string>
    <string name="creation_date">Дата создания: %s</string>
    <string name="update_date">Дата обновления: %s</string>
    <string name="main_activity_add_menu_item">Создать заметку</string>
    <string name="next_actions_list_edit_priority_text">Приоритет:</string>
    <string name="project_text">Проект:</string>
    <string name="context_text">Контекст:</string>
    <string name="remind_time">Напомнить о заметке:</string>
    <string name="remind_time_format">Напомнить о заметке: %s</string>
    <string name="waiting_time">Время ожидания:</string>
    <string name="waiting_time_format">Время ожидания: %s</string>
    <string name="do_time">Дата события:</string>
    <string name="do_time_format">Дата события: %s</string>
    <string name="deadline_time_text">Крайний срок (deadline):</string>
    <string name="deadline_time_text_format">Крайний срок (deadline): %s</string>
    <string name="calendar_button_description">calendar button</string>
    <string name="move_note_text">Выберите, куда перенести заметку</string>
    <string name="cancel_dialog">Отменить</string>
    <string name="delete_note_dialog">Заметка удалена</string>
    <string name="no_context_spinner_item">Нет контекста</string>
    <string name="filter_dialog_title">Фильтрация заметок</string>
    <string name="no_filter_in_note">Нет фильтраций для входящих заметок</string>
    <string name="choose_project_dialog_title">Выберите проект</string>
    <string name="choose_context_dialog_title">Выберите контекст</string>
    <string name="projects_menu_item">Проекты</string>
    <string name="contexts_menu_item">Контексты</string>
    <string name="project_name">Название проекта</string>
    <string name="project_content">Описание проекта</string>
    <string name="context_name">Название контекста</string>
    <string name="context_content">Описание контекста</string>
    <string name="project_delete_toast">Проект удален</string>
    <string name="no_empty_project_name_toast">Нельзя сохранить проект с пустым именем</string>
    <string name="form_edit_context_delete">Удалить контекст</string>
    <string name="create_project_menu_item">Создать проект</string>
    <string name="delete_project_menu_item">Удалить проект</string>
    <string name="empty_project_name_toast">Нельзя сохранить проект с пустым именем</string>
    <string name="create_context_menu_item">Создать контекст</string>
    <string name="delete_context_toast">Контекст удалён</string>
    <string name="empty_context_name_toast">Нельзя сохранить контекст с пустым именем</string>
    <string name="notification_channel_name">Напоминание о заметке</string>
    <string name="notification_title">Напоминание о заметке</string>
</resources>
