<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/main_activity_add_menu_item"
            android:orderInCategory="1"
            android:title="@string/main_activity_add_menu_item"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/main_activity_projects_menu_item"
            android:orderInCategory="1"
            android:title="@string/projects_menu_item"
            app:showAsAction="never"
    />
    <item
            android:id="@+id/main_activity_contexts_menu_item"
            android:orderInCategory="2"
            android:title="@string/contexts_menu_item"
            app:showAsAction="never"
    />
    <item
            android:id="@+id/main_activity_filter_menu_item"
            android:orderInCategory="3"
            android:title="@string/button_filter"
            app:showAsAction="never"
    />
    <!--<item-->
            <!--android:id="@+id/button_sort"-->
            <!--android:orderInCategory="4"-->
            <!--android:title="@string/button_sort"-->
            <!--app:showAsAction="never"-->
    <!--/>-->
</menu>